# comma-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: build_wheels.yml  main.yml  pre-commit.yml  publish-to-test-pypi.yml
comma/: comma_config.py  main.py
comma/_personal/: zero_tier.py
comma/api/: server.py
comma/cli/: devcon.py  docker.py  log_tool.py  reflection.py  runtool2.py  runtool_cli.py  shell_scripts.py  shell_utils.py  wt.py
comma/config/: comma_config.py
comma/devcon/: __init__.py  devcon.py
comma/docker/: __init__.py
comma/machine/: local_machine.py  machine.py  ssh_machine.py
comma/misc/: code.py  tmux.py  wt.py
comma/resources/: __init__.py  config.yaml  old__init__.py
comma/resources/shell_scripts/: bb
comma/shell_scripts/: bb  dev.sh  shell_scripts.py  shell_utils.py
comma/typer/: reflection.py
comma/utils/: ftypes.py  halo.py  lazy_install.py  performance.py  resources.py
comma/utils/containers/: pair.py
fzf/: __init__.py
geckobuild/: Dockerfile  docker-compose.yaml
gum/: __init__.py  choose.py  confirm.py  file.py  filter.py  format.py  input.py  join.py  pager.py  spin.py  style.py  table.py  write.py
runtool/: __init__.py  runtool.ini  runtool_cli.py
simple_argparser/: simple_rick.py
src/comma/: __about__.py  __init__.py  main.py  scratch.py
src/comma/_personal/: lazy_meetup.py  server.py  zero_tier.py
src/comma/_typer/: pair2.py
src/comma/cli/: code.py  docker.py  shell_utils.py  tmux.py  wt.py  zero_tier.py
src/comma/command/: __init__.py
src/comma/config/: __init__.py
src/comma/devcon/: __init__.py
src/comma/docker/: __init__.py
src/comma/logtool/: __init__.py
src/comma/machine/: local_machine.py  machine.py  ssh_machine.py
src/comma/misc/: code.py  dual_writer.py  env_vars.py  file_utils.py  find_command.py  m_git.py  performance.py  singleton.py  tmux.py  wt.py
src/comma/resources/: __init__.py
src/comma/rich/: halo.py
src/comma/shell_scripts/: cmd.py  dev.sh  shell_scripts.py  shell_utils.py
src/comma/simple_argparser/: __init__.py  simple_rick.py
src/comma/typer/: pair.py  pair2.py  reflection.py  typer_utils.py
src/comma/types/: __init__.py
src/comma/utils/: command.py  file_utils.py  persistent_cache.py
src/gron/: __init__.py  __main__.py
src/gum/: __init__.py
src/tool_wrapper/: __init__.py
tests/: comma_test.py  entrypoint_test.py  gron_test.py
