[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comma-cli"
dynamic = ["version"]
description = "Multi-Tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Flavio Amurrio", email = "25621374+FlavioAmurrioCS@users.noreply.github.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "persistent-cache-decorator",
    "pyfunctional",
    "requests",
    "rich",
    "runtool",
    "typedfzf",
    "typer",
    "typing-extensions",
]

[project.optional-dependencies]
personal = [
    "fastapi",
    "polyfactory",
    "pydantic",
    "selenium",
    "twilio",
    "uvicorn[standard]",
]

[project.scripts]
- = "comma.main:app_main"
-c = "comma.misc.code:app_c"
-devcon = "comma.devcon:app_devcon"
-docker = "comma.docker:app_docker"
-lt = "comma.logtool:app_logtool"
-mux = "comma.misc.tmux:app_mux"
-runFunc = "comma.typer.reflection:run_func"
-sh = "comma.shell_scripts.shell_utils:app_sh"
-sh-script = "comma.shell_scripts.shell_scripts:app_shell_scripts"
-showFunc = "comma.typer.reflection:show_func"
dev = "comma.main:app_main"

[project.urls]
Homepage = "https://github.com/FlavioAmurrioCS/comma"

[tool.hatch.version]
path = "comma_cli/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/comma_cli",
]
