[metadata]
name = comma
version = 1.0.0
description = Multi-Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FlavioAmurrioCS/comma
author = Flavio Amurrio
author_email = 25621374+FlavioAmurrioCS@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    fastapi
    identify
    pyfunctional@git+https://github.com/weditor/PyFunctional@typing
    rich
    ruamel.yaml
    selenium
    twilio
    typer
    typing-extensions
    uvicorn[standard]
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    - = comma.main:app_main
    -c = comma.cli.code:app_c
    -docker = comma.cli.docker:app_docker
    -lt = comma.cli.log_tool:app_logtool
    -mux = comma.cli.tmux:app_mux
    -run = comma.cli.runtool2:main
    -run-which = comma.cli.runtool2:__run_which__
    -sh = comma.cli.shell_utils:app_sh
    -wt = comma.cli.wt:app_wt
    -zt = comma.cli.zero_tier:app_zerotier

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
parallel = true

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[pycodestyle]
max_line_length = 300
